Fix z-index for toolbox and language

--- a/static/css/bot.scss
+++ b/static/css/bot.scss
@@ -120,7 +120,7 @@ html, body {
 }
 
 .languages {
-  z-index: 999;
+  z-index: 99;
 }
 
 #select_language {
